# credit-risk-glm-production

./: .gitignore  Makefile  README.md  example_usage.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ml-pipeline.yml
api/: __init__.py  app.py
docker/: Dockerfile  docker-compose.yml
docs/source/: conf.py  index.rst  src.rst
k8s/: deployment.yaml  pvc.yaml
monitoring/grafana/dashboards/: glm-model-dashboard.json
monitoring/prometheus/: alerts.yml  prometheus.yml
nginx/: nginx.conf
scripts/: setup.sh
security/: security.yaml
src/: __init__.py  explainability.py  feature_store.py  glm_model.py  mlops_pipeline.py
tests/: __init__.py  conftest.py  load_testing.py  test_api.py  test_explainability.py  test_feature_store.py  test_glm_model.py  test_mlops_pipeline.py
